--- a/代码/APP/app/src/main/res/layout/activity_main.xml
+++ b/代码/APP/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="53dp"
         android:layout_marginBottom="185dp"
+        android:onClick="Gra"
         android:text="物品拾取"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
