--- a/代码/APP/app/src/main/res/layout/activity_navga.xml
+++ b/代码/APP/app/src/main/res/layout/activity_navga.xml
@@ -6,4 +6,94 @@
     android:layout_height="match_parent"
     tools:context=".Navga">
 
+    <Button
+        android:id="@+id/turnleft"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="36dp"
+        android:text="左转"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoView" />
+
+    <Button
+        android:id="@+id/turnright"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="36dp"
+        android:text="右转"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoView" />
+
+    <Button
+        android:id="@+id/up"
+        android:layout_width="97dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="200dp"
+        android:text="上"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoView" />
+
+    <Button
+        android:id="@+id/left"
+        android:layout_width="92dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="84dp"
+        android:text="左"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/turnleft" />
+
+    <Button
+        android:id="@+id/right"
+        android:layout_width="90dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="40dp"
+        android:text="右"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/turnright" />
+
+    <Button
+        android:id="@+id/down"
+        android:layout_width="98dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="200dp"
+        android:text="下"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/up" />
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="371dp"
+        android:layout_height="301dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/startNav"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="29dp"
+        android:text="开始导航"
+        app:layout_constraintBottom_toTopOf="@+id/up"
+        app:layout_constraintEnd_toStartOf="@+id/turnright"
+        app:layout_constraintStart_toEndOf="@+id/turnleft"
+        app:layout_constraintTop_toBottomOf="@+id/videoView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
