--- a/代码/APP/app/src/main/res/layout/activity_ctrl_win.xml
+++ b/代码/APP/app/src/main/res/layout/activity_ctrl_win.xml
@@ -12,6 +12,7 @@
         android:layout_height="44dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="36dp"
+        android:onClick="rotateleft"
         android:text="左转"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/videoView" />
@@ -22,6 +23,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="36dp"
+        android:onClick="rotateright"
         android:text="右转"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/videoView" />
@@ -33,6 +35,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="200dp"
+        android:onClick="forward"
         android:text="上"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +47,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="84dp"
+        android:onClick="turnleft"
         android:text="左"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/turnleft" />
@@ -54,6 +58,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="40dp"
+        android:onClick="turnright"
         android:text="右"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/turnright" />
@@ -65,6 +70,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="200dp"
+        android:onClick="backward"
         android:text="下"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
