--- a/代码/APP/app/src/main/res/layout/activity_grab.xml
+++ b/代码/APP/app/src/main/res/layout/activity_grab.xml
@@ -16,43 +16,59 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/color"
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="100dp"
-        android:prompt="@string/select_type"
         android:visibility="visible"
+        android:spinnerMode="dropdown"
+        android:entries="@array/color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/videoView2" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/size"
         android:layout_width="213dp"
         android:layout_height="23dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="100dp"
-        android:prompt="@string/select_val"
         android:visibility="visible"
+        android:spinnerMode="dropdown"
+        android:entries="@array/size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/color" />
+
+    <Spinner
+        android:id="@+id/pos"
+        android:layout_width="209dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="26dp"
+        android:entries="@array/pos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/size" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/grab"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="100dp"
+        android:onClick="sendMsg"
         android:text="开始抓取"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/pos" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
