--- a/代码/APP/app/src/main/res/layout/activity_main.xml
+++ b/代码/APP/app/src/main/res/layout/activity_main.xml
@@ -7,59 +7,79 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="功能选择"
-        android:textSize="24sp"
+        android:text="输入机器人ip地址："
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.123" />
+        app:layout_constraintVertical_bias="0.265" />
+
+    <EditText
+        android:id="@+id/serverAddInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="192.168.31.106"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/connectMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintStart_toStartOf="@+id/serverAddInput"
+        app:layout_constraintTop_toBottomOf="@+id/serverAddInput" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="113dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="109dp"
-        android:layout_marginBottom="71dp"
-        android:onClick="toCtrl"
-        android:text="主动控制"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:onClick="connectServer"
+        android:text="连接"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/serverAddInput" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="113dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="71dp"
-        android:layout_marginBottom="77dp"
-        android:onClick="Nav"
-        android:text="路径规划"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="jump"
+        android:text="test jump"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="113dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginBottom="185dp"
-        android:onClick="Gra"
-        android:text="物品拾取"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="62dp"
+        android:layout_marginLeft="62dp"
+        android:layout_marginTop="29dp"
+        android:text="端口号：（默认28888）"
+        app:layout_constraintStart_toStartOf="@+id/serverAddInput"
+        app:layout_constraintTop_toBottomOf="@+id/serverAddInput" />
+
+    <EditText
+        android:id="@+id/portInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="28888"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
