--- a/代码/APP/app/src/main/res/layout/activity_navga.xml
+++ b/代码/APP/app/src/main/res/layout/activity_navga.xml
@@ -6,75 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".Navga">
 
-    <Button
-        android:id="@+id/turnleft"
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="36dp"
-        android:text="左转"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="43dp"
+        android:text="朝向"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <Button
-        android:id="@+id/turnright"
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="36dp"
-        android:text="右转"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoView" />
-
-    <Button
-        android:id="@+id/up"
-        android:layout_width="97dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="200dp"
-        android:text="上"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="59dp"
+        android:text="Y"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoView" />
-
-    <Button
-        android:id="@+id/left"
-        android:layout_width="92dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="84dp"
-        android:text="左"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/turnleft" />
-
-    <Button
-        android:id="@+id/right"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="40dp"
-        android:text="右"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/turnright" />
-
-    <Button
-        android:id="@+id/down"
-        android:layout_width="98dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="200dp"
-        android:text="下"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <VideoView
         android:id="@+id/videoView"
-        android:layout_width="371dp"
-        android:layout_height="301dp"
+        android:layout_width="366dp"
+        android:layout_height="203dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -84,16 +39,77 @@
 
     <Button
         android:id="@+id/startNav"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="29dp"
+        android:layout_width="100dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="141dp"
+        android:onClick="sendMsg"
         android:text="开始导航"
-        app:layout_constraintBottom_toTopOf="@+id/up"
-        app:layout_constraintEnd_toStartOf="@+id/turnright"
-        app:layout_constraintStart_toEndOf="@+id/turnleft"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/direction" />
+
+    <EditText
+        android:id="@+id/xval"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="58dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Input the X value"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/videoView" />
+
+    <EditText
+        android:id="@+id/yval"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="23dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Input the Y value"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/xval" />
+
+    <EditText
+        android:id="@+id/direction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="73dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="58dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Input the direction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/yval" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="59dp"
+        android:text="X"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoView" />
+
+    <Button
+        android:id="@+id/endNagv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:onClick="end"
+        android:text="终止导航"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startNav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
